--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -8,10 +8,29 @@
 		margin:auto;
 }
 
+.bigbrand{
+		font-size:1.5em;
+}
 
 
+.postdate{
+		text-align:center;
+}
+.posttitle{
+		font-family:'Russo One',sans-serif;
+		font-size:3em;
+		margin-bottom:10;
+		text-align:center;
+}
 
+.postcontent{
+		font-family:1.5em 'Montserrat';
+}
 
+.btn-comment{
+		position:absolute;
+		right:0px;
+}
 
 
 
