--- a/blog/templates/regristration/login.html
+++ b/blog/templates/regristration/login.html
@@ -13,8 +13,9 @@
 
 		<form action="{% url 'login' %}" method="POST">
 				{%csrf_token%}
-				{%form.as_p%}
+				{{form.as_p}}
 				<input type="submit" name="" class="btn btn-primary" value="Login">
 				<input type="hidden" name="next" value="{{next}}">
 		</form>
 </div>
+{%endblock%}
