--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,41 +5,66 @@
 				<meta charset="UTF-8" />
 				<meta name="viewport" content="width=device-width" />
 				<title>{% block 'title' %} {%endblock%}</title>
-				<link rel="stylesheet" href="{%static 'css/bootstrap.css'%}" type="text/css" media="screen" title="no title" charset="utf-8">
-				<!--  Bootstrap -->
 				<!-- Latest compiled and minified CSS -->
-				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+				<!-- Optional theme -->
+				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 				<!--  Medium Style Editor -->
-				<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+				{# <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css"> #}
+				{# <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  #}
 				<!--  Custom Css -->
 				<link rel="stylesheet" href="{% static 'css/blog.css'%}">
-
 				<!--  Fonts -->
 				<link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One" rel="stylesheet">
 		</head>
 		<body >
 				<!-- Navbar --> 
-				<!-- custom&#45;navbar is just extra class, for just in case  -->
-				<nav class="navbar navbar-toggleable-md navbar-light fixed-top py-4 techfont custom-navbar">
-						<div class="container">
-								<ul class="navbar-nav ml-auto">
-										<li class="nav-item"><a class="nav-link navbar-brand big-brand" href="{% url 'post_list'%}">My Blog</a> </li>
+				<nav class="navbar navbar-expand-lg navbar-light bg-light">
+						<a class="navbar-brand" href="{% url 'post_list'%}">SL Blog</a>
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+								<ul class="navbar-nav mr-auto">
+										<li class="nav-item"> <a class="nav-link navbar-brand big-brand" href="{% url 'post_list'%}">My Blog</a></li>
 										<li class="nav-item"><a class="nav-link"href="{% url 'about'%}">About</a> </li>
 										<li class="nav-item"><a class="nav-link"href="https://www.github.com">Github</a> </li>
 										<li class="nav-item"><a class="nav-link"href="https://www.linkedin.com">LinkedIn</a> </li>
-								</ul>
-								<ul class="navbar navbar-nav navbar-dark navbar-right">
-										{%if user.is_authenticated%}
-										<li> <a href="{%url 'post_new'%}">New Post</a> </li>
-										<li> <a href="{%url 'post_draft_list'%}">Drafts</a> </li>
-										<li> <a href="{%url 'logout'%}">Logout</a> </li>
-										<li> <a>Welcome: {{user.username}}</a> </li>
-										{%else%}
-										<li><a href="{%url 'login'%}"> <span class="glyphicon glypthicon-user"></span> </a> </li>
-										{%endif%}
+										<a class="nav-item" href="{%url 'login'%}"><span class="glyphicon glyphicon-user">login</span></a>
+										{% if user.is_authenticated %}
+										<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">New Post</a> </li>
+										<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Drafts</a> </li>
+										<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Logout</a> </li>
+										<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Welcome: {{user.username}}</a> </li>
+										{% else %}
+										{# <a class="nav-item" href="{%url 'login'%}"> <span class="fa fa-user"></span> </a> #}
+										{% endif %}
 								</ul>
 						</div>
 				</nav>
+
+
+				<!--
+				<nav class="navbar navbar-default navbar-fixed-top">
+				<div class="container">
+				<a class="navbar-brand" href="{%url 'post_list'%}">Sagar</a>
+				<ul class="navbar-nav">
+				<li class="nav-item"> <a class="nav-link navbar-brand big-brand" href="{% url 'post_list'%}">My Blog</a></li>
+				<li class="nav-item"><a class="nav-link"href="{% url 'about'%}">About</a> </li>
+				<li class="nav-item"><a class="nav-link"href="https://www.github.com">Github</a> </li>
+				<li class="nav-item"><a class="nav-link"href="https://www.linkedin.com">LinkedIn</a> </li>
+				{% if user.is_authenticated %}
+				<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">New Post</a> </li>
+				<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Drafts</a> </li>
+				<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Logout</a> </li>
+				<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Welcome: {{user.username}}</a> </li>
+				{% else %}
+				<a class="nav navbar-right" href="{%url 'login'%}"> <span class="fa fa-user"></span> </a>
+				{% endif %}
+				</ul>
+				</div>
+				</nav>
+				-->
+
 				<!-- content block -->
 				<div class="content container">
 						<div class="row">
@@ -50,8 +75,16 @@
 										</div>
 								</col-md-8>
 						</div>
-
 				</div>
 				<script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+				<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+						integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+			crossorigin="anonymous"></script>
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+						integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+			crossorigin="anonymous"></script>
+				<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+						integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+			crossorigin="anonymous"></script>
 		</body>
 </html>
