--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,7 @@
 {%else%}
 <a class="btn btn-default" href="{% url 'post_publish' pk = post.pk %}">Pubhlish</a>
 {%endif%}
-<p class="postcontent">{{post.title|safe|linebreaksbr}}</p>
+<p class="postcontent">{{post.text|safe|linebreaksbr}}</p>
 
 {%if user.is_authenticated %}
 <a class="btn btn-primary" href="{%url 'post_edit' pk=post.pk%}"> <span class="glyphicon glyphicon-pencil"></span> </a> 
@@ -22,8 +22,7 @@
 						{{comment.created_date}}
 						{% if not comment.approved_comment %}
 								<a class="btn btn-default" href="{%url 'comment_remove' pk=comment.pk%}"> <span class="glyphicon glyphicon-remove"></span> </a> 
-								<a class="btn btn-primary" href="{%url 'comment_approve' pk=comment.pk%}"> <span
-												class="glyphicon glyphicon-ok"></span> </a> 
+								<a class="btn btn-primary" href="{%url 'comment_approve' pk=comment.pk%}"> <span class="glyphicon glyphicon-ok"></span> </a> 
 						{%endif%}
 
 						<p>{{comment.text|safe|linebreaks}}</p>
