--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,5 +1,7 @@
 {%extends "blog/base.html"%}
-{% block content %}
+{% block 'content' %}
 <h1>About Me</h1>
+<h1>Thank you</h1>
 <p>Thanks for checking out</p>
 {%endblock%}
+
