--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,79 +4,67 @@
 		<head>
 				<meta charset="UTF-8" />
 				<meta name="viewport" content="width=device-width" />
-				<title>{% block 'title' %} {%endblock%}</title>
-				<!-- Latest compiled and minified CSS -->
-				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+				<title>MySite</title>
+				{# Bootstrap #}
+				<link rel="stylesheet"
+					href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+		 integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+	 crossorigin="anonymous">
 
-				<!-- Optional theme -->
-				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-				<!--  Medium Style Editor -->
-				{# <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css"> #}
-				{# <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  #}
-				<!--  Custom Css -->
-				<link rel="stylesheet" href="{% static 'css/blog.css'%}">
-				<!--  Fonts -->
-				<link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One" rel="stylesheet">
+				<link rel="stylesheet"
+					href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css"
+		 type="text/css" media="screen" charset="utf-8">
+
+				<link rel="stylesheet" href="{% static 'css/blog.css'%}" type="text/css" media="screen" title="no title" charset="utf-8">
+				<link rel="stylesheet"
+					href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		</head>
-		<body >
-				<!-- Navbar --> 
-				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-						<a class="navbar-brand" href="{% url 'post_list'%}">SL Blog</a>
-						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-						<div class="collapse navbar-collapse" id="navbarSupportedContent">
-								<ul class="navbar-nav mr-auto">
-										<li class="nav-item"> <a class="nav-link navbar-brand big-brand" href="{% url 'post_list'%}">My Blog</a></li>
-										<li class="nav-item"><a class="nav-link"href="{% url 'about'%}">About</a> </li>
-										<li class="nav-item"><a class="nav-link"href="https://www.github.com">Github</a> </li>
-										<li class="nav-item"><a class="nav-link"href="https://www.linkedin.com">LinkedIn</a> </li>
-										<a class="nav-item" href="{%url 'login'%}"><span class="glyphicon glyphicon-user">login</span></a>
-										{% if user.is_authenticated %}
-										<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">New Post</a> </li>
-										<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Drafts</a> </li>
-										<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Logout</a> </li>
-										<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Welcome: {{user.username}}</a> </li>
-										{% else %}
-										{# <a class="nav-item" href="{%url 'login'%}"> <span class="fa fa-user"></span> </a> #}
-										{% endif %}
-								</ul>
-						</div>
-				</nav>
+		<body>
+				<header>
+
+						<nav class="navbar navbar-expand-lg navbar-light bg-light">
+								<a class="navbar-brand" href="{%url 'post_list'%}">SL</a>
+								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+										<span class="navbar-toggler-icon"></span>
+								</button>
+
+								<div class="collapse navbar-collapse" id="navbarSupportedContent">
+										<ul class="navbar-nav ml-auto">
+												<li class="nav-item"> <a class="nav-link"
+																		 href="{%url 'about'%}">About</a> </li>
+												<li class="nav-item"> <a class="nav-link" href="https://www.github.com">Github</a> </li>
+												<li class="nav-item"> <a class="nav-link" href="https://www.github.com">LinkedIn</a> </li>
+												<li class="nav-item"> <a class="nav-link" href="https://www.github.com">Facebook</a> </li>
 
 
-				<!--
-				<nav class="navbar navbar-default navbar-fixed-top">
-				<div class="container">
-				<a class="navbar-brand" href="{%url 'post_list'%}">Sagar</a>
-				<ul class="navbar-nav">
-				<li class="nav-item"> <a class="nav-link navbar-brand big-brand" href="{% url 'post_list'%}">My Blog</a></li>
-				<li class="nav-item"><a class="nav-link"href="{% url 'about'%}">About</a> </li>
-				<li class="nav-item"><a class="nav-link"href="https://www.github.com">Github</a> </li>
-				<li class="nav-item"><a class="nav-link"href="https://www.linkedin.com">LinkedIn</a> </li>
-				{% if user.is_authenticated %}
-				<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">New Post</a> </li>
-				<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Drafts</a> </li>
-				<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Logout</a> </li>
-				<li class ="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">Welcome: {{user.username}}</a> </li>
-				{% else %}
-				<a class="nav navbar-right" href="{%url 'login'%}"> <span class="fa fa-user"></span> </a>
-				{% endif %}
-				</ul>
-				</div>
-				</nav>
-				-->
+												{% if user.is_authenticated %}
+													<li class="nav-item"> <a class="nav-link" href="{%url 'post_new'%}">New Post</a> </li>
+													<li class="nav-item"> <a class="nav-link" href="{%url 'post_draft_list'%}">Drafts</a> </li>
+													<li class="nav-item"> <a class="nav-link" href="{%url 'logout'%}">Logout</a> </li>
+													{% else %}
+													<li class="nav-item">
+															<a class="nav-link" href="{%url 'login'%}">
+															<span class="fa fa-user"></span>
+														</a>
+													</li>
+													
+												{% endif %}
+										</ul>
+								</div>
+						</nav>
+				</header>
 
-				<!-- content block -->
 				<div class="content container">
 						<div class="row">
-								<col-md-8>
-										<div class="blog-posts">
+								<div class="col-md-8">
+										<div class="blog_posts">
 												{%block 'content'%}
 												{%endblock%}
 										</div>
-								</col-md-8>
+								</div>
 						</div>
 				</div>
-				<script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+
 				<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 						integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 			crossorigin="anonymous"></script>
@@ -86,5 +74,6 @@
 				<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
 						integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
 			crossorigin="anonymous"></script>
+				<script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
 		</body>
 </html>
