--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,7 +1,8 @@
 {% extends 'base.html'%}
 {%load staticfiles %}
-{% block content %}
+{% block 'content' %}
 <div class="centerstage">
+		<h1>This is the list of posts</h1>
 		{% for post in  post_list%}
 		<div class="post">
 			<h1> <a href="{%url 'post_detail' pk=post.pk%}">{{post.title}}</a> </h1>
