--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,17 +1,18 @@
 {%extends 'blog/base.html'%}
-{% block content%}
+{%load staticfiles%}
+{% block 'content'%}
 <div class="jumbotron">
-				<h2>Please Login:</h2>
-				<h3>(Must be SuperUser, Please check with the site admin)</h3>
+		<h2>Please Login:</h2>
+		<h3>(Must be SuperUser, Please check with the site admin)</h3>
 
-				{%if form.errors%}
-				<p>Your username and password didn't match! Please try again.</p>
-				{%endif%}
-				<form action="{% url 'login' %}" method="POST">
-								{%csrf_token%}
-								{{form.as_p}}
-								<input type="submit" name="" class="btn btn-primary" value="Login">
-								<input type="hidden" name="next" value="{{next}}">
-						</form>
-		</div>
+		{%if form.errors%}
+		<p>Your username and password didn't match! Please try again.</p>
+		{%endif%}
+		<form action="{% url 'login' %}" method="POST">
+				{%csrf_token%}
+				{{form.as_p}}
+				<input type="submit" name="" class="btn btn-primary" value="Login">
+				<input type="hidden" name="next" value="{{next}}">
+		</form>
+</div>
 {%endblock%}
